fix: invalid email verify tokens no longer break the app (#107)

--- a/src/shared/components/email-verify/EmailVerifyCmp.module.scss
+++ b/src/shared/components/email-verify/EmailVerifyCmp.module.scss
@@ -3,4 +3,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  .text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .sadFace {
+    margin-left: 16px;
+  }
 }
