--- a/src/shared/components/not-found/NotFoundCmp.module.scss
+++ b/src/shared/components/not-found/NotFoundCmp.module.scss
@@ -18,13 +18,4 @@
     white-space: normal;
     text-align: center;
   }
-
-  .goBackClickable {
-    color: cornflowerblue;
-
-    &:hover {
-      cursor: pointer;
-      text-decoration: underline;
-    }
-  }
 }
